tests/golden/fixtures/syntax-symbolic-subscripts-err-non-array-field-index/expected.err
Error: symbolic subscript field 'foo.idx' is not an array
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-non-array-field-index/input.k65:6:5 ]
   │
 6 │     lda foo.idx[1]
   │     ───────┬──────  
   │            ╰──────── indexed access on non-array field
   │ 
   │ Help: drop the `[...]` and write `foo.idx` to read the single value, or change the field's declaration to `.idx:type[N]` if you need an explicitly typed array slot
   │ 
   │ Note: Symbolic subscript fields without a `[count]` declare a single named slot; only fields with `[count >= 2]` produce array semantics that an `[index]` can dereference.
───╯
